src/test/ui/const-generics/defaults/intermixed-lifetime.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/intermixed-lifetime.rs:6:28
   |
LL | struct Foo<const N: usize, 'a, T = u32>(&'a (), T);
   |           -----------------^^---------- help: reorder the parameters: lifetimes, then consts and types: `<'a, T, const N: usize>`

error: lifetime parameters must be declared prior to const parameters
  --> $DIR/intermixed-lifetime.rs:9:37
   |
LL | struct Bar<const N: usize, T = u32, 'a>(&'a (), T);
   |           --------------------------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, T, const N: usize>`

error: aborting due to 2 previous errors

